deployment_assets/sasportal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sasportal-depl
    labels:
        app: sasportal
        app.kubernetes.io/part-of: sasportal-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: sasportal
    template:
        metadata:
            labels:
                app: sasportal
                app.kubernetes.io/part-of: sasportal-depl
        spec:
            containers:
                - name: sasportal
                  image: nginx:1.22.0-alpine
                  imagePullPolicy: IfNotPresent
                  workingDir: /tmp/app/sasportal
                  command: ["/bin/sh", "-c"]
                  args:
                    #   - cp ./deployment_assets/nginx.default.conf /etc/nginx/conf.d/default.conf;
                      - mv ./build/* /usr/share/nginx/html;
                        nginx -g 'daemon off;';
                  ports:
                      - containerPort: 80
                        name: sasportal
                  resources:
                      limits:
                          cpu: 500m
                          memory: 500Mi
                      requests:
                          cpu: 50m
                          memory: 50Mi
                  volumeMounts:
                    - mountPath: /tmp/app
                      name: app-folder
            volumes:
                - name: app-folder
                  emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
    name: sasportal-service
    labels:
        app: sasportal-service
        app.kubernetes.io/part-of: sasportal-depl
spec:
    selector:
        app: sasportal
    type: NodePort
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
          nodePort: 30080
